--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,18 +5,46 @@
         <span class="navbar-toggler-icon"></span>
       </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/campgrounds">Campgrounds</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/campgrounds/new">Add New Campground</a>
-                </li>
-
-            </ul>
+            <div class="navbar-nav">
+                <a href="/" class="nav-link">Home</a>
+                <a href="/campgrounds" class="nav-link">Campgrounds</a>
+                <a href="/campgrounds/new" class="nav-link">Add Campground</a>
+            </div>
+            <div class="navbar-nav ms-auto">
+                <%if(!currentUser){%>
+                    <a href="/login" class="nav-link">Login</a>
+                    <a href="/register" class="nav-link">SignUp</a>
+                    <% }else{ %>
+                        <a href="/logout" class="nav-link">Logout</a>
+                        <% } %>
+            </div>
         </div>
     </div>
+    </div>
 </nav>
+
+
+
+
+<!-- <ul class="navbar-nav">
+    <li class="nav-item">
+        <a class="nav-link" href="/">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/campgrounds">Campgrounds</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/campgrounds/new">Add New Campground</a>
+    </li>
+</ul>
+<ul class="navbar-nav ml-auto">
+    <li class="nav-item ">
+        <a href="/login" class="nav-link">Login</a>
+    </li>
+    <li class="nav-item">
+        <a href="/register" class="nav-link">SignUp</a>
+    </li>
+    <li class="nav-item">
+        <a href="/logout" class="nav-link">Logout</a>
+    </li>
+</ul> -->
