--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -16,15 +16,21 @@
                     <li class="list-group-item text-muted">
                         <%=campground.location%>
                     </li>
+                    <li class="list-group-item text-muted">
+                        <strong>Author:</strong>
+                        <%=campground.author.username%>
+                    </li>
                     <li class="list-group-item"> $
                         <%=campground.price%>/night</li>
                 </ul>
-                <div class="card-body">
-                    <a class="card-link btn btn-info" href="/campgrounds/<%=campground._id%>/edit">EDIT</a>
-                    <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
-                        <button class="btn btn-danger">DELETE</button>
-                    </form>
-                </div>
+                <% if(currentUser && campground.author.equals(currentUser._id)){ %>
+                    <div class="card-body">
+                        <a class="card-link btn btn-info" href="/campgrounds/<%=campground._id%>/edit">EDIT</a>
+                        <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+                            <button class="btn btn-danger">DELETE</button>
+                        </form>
+                    </div>
+                    <% } %>
             </div>
         </div>
         <div class="col-6">
